updating font color

--- a/angular.json
+++ b/angular.json
@@ -122,5 +122,8 @@
       }
     }
   },
-  "defaultProject": "typefaster-game"
+  "defaultProject": "typefaster-game",
+  "cli": {
+    "analytics": false
+  }
 }
